fix wrapping bug

--- a/css/sidenav.css
+++ b/css/sidenav.css
@@ -33,6 +33,9 @@
 }
 .pf-group {
   margin-top: 10px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 .pf-group.selected > p {
   color: white;
